@@ -1,3 +1,8 @@
+2008-03-03  Bob Wilson  <bob.wilson@acm.org>
+	
+	* xtensa-isa.c (xtensa_isa_num_pipe_stages): Make max_stage static and
+	only compute its value once.
+	
 2008-03-03  Alan Modra  <amodra@bigpond.net.au>
 
 	* elf32-spu.c (struct got_entry): Add "addend" field.
